# dejango_seralizers

./: pyproject.toml  requirements.txt
api/: factories.py
api/tests/: test_product_serializer.py  test_product_viewset.py
api/viewsets/: __init__.py  api_viewset.py
django_serializers/: settings.py  urls.py
