[tool.poetry]
name = "django-serializers"
version = "0.1.0"
description = ""
authors = ["hsanfilippo <henrique.sanfilippo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
factory-boy = "^3.3.0"
pytest-django = "^4.8.0"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
